--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="shortcut icon" href="/favicon.ico" />
 </head>
 <body>
-index
+<div>index :)</div>
+<a href="/login">log in</a>
 </body>
 </html>
