--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="">
 <head>
   <title>Please Log In</title>
+  <link rel="shortcut icon" href="/favicon.ico" />
 </head>
 <body>
-<h1>Please Log In</h1>
+<h1>Please Log In :D</h1>
 <div th:if="${param.error}">
   Invalid username and password.</div>
 <div th:if="${param.logout}">
