--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="shortcut icon" href="/favicon.ico" />
 </head>
 <body>
-profile -_-
+<div>profile -_-</div>
+<a href="/logout">log out</a>
 </body>
 </html>
