--- a/src/main/resources/templates/spots.html
+++ b/src/main/resources/templates/spots.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-spots
+<h1>spots</h1>
+
+<div>
+    <div>sort</div>
+    <div>filter</div>
+
+    <a th:each="spot : ${spotList}"
+       th:href="@{/spot/{spotId}(spotId=${spot.id()})}"
+       style="border: 1px solid black; margin-top: 5px;">
+        <img src="https://rideukbmx.com/wp-content/uploads/2022/08/Adam-LV-Photography-Junction-4-skatepark-41-1-680x380.jpg"
+             width="30%" alt="img">
+        <span th:text="${spot.name()}"></span>
+        <span th:text="${spot.description()}"></span>
+        <span th:text="${spot.insertedAt()}"></span>
+    </a>
+</div>
+
+
 </body>
 </html>
