--- a/src/main/resources/templates/spot.html
+++ b/src/main/resources/templates/spot.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" lang="">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>spot</title>
 </head>
 <body>
+<div>
+    <div th:if="${#lists.isEmpty(spot.spotImageLinks())}">
+        Картинки для спота отсутствуют
+    </div>
+    <div th:if="${not #lists.isEmpty(spot.spotImageLinks())}">
+        <img th:each="link : ${spot.spotImageLinks()}"
+             th:src="@{${link}}"
+             width="300px"
+             alt="img">
+    </div>
 
+</div>
+<div th:text="${spot.name()}"></div>
+<div th:text="${spot.description()}"></div>
+<div th:text="${spot.insertedAt()}"></div>
 </body>
 </html>
