Xmap 36 - рефакторинг, завез бутстрап, переделал структуру на шаблоны

--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -1,14 +1,2 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Title</title>
-  <link rel="shortcut icon" href="/favicon.ico" />
-</head>
-<body>
-  <form method="post" action="/logout">
-    <input type="submit" value="Logout"/>
-  </form>
-
-</body>
-</html>
+<div th:replace="layouts/base :: base(title='Выход', contentFragment='fragments/forms/logout')"></div>
