--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,12 +1,2 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="shortcut icon" href="/favicon.ico" />
-</head>
-<body>
-<div>profile -_-</div>
-<a href="/logout">log out</a>
-</body>
-</html>
+<div th:replace="layouts/base :: base(title='Профиль', contentFragment='fragments/profile')"></div>
