Xmap 36 - нижнее меню с адаптивом

--- a/src/main/resources/templates/layouts/base.html
+++ b/src/main/resources/templates/layouts/base.html
@@ -6,6 +6,9 @@
   <link rel="shortcut icon" href="/favicon.ico" />
   <title th:text="${title}">Базовый шаблон</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <link href="/styles/common.css" rel="stylesheet">
+  <link href="/styles/nav.css" rel="stylesheet">
+  <link href="/styles/themes/light.css" rel="stylesheet">
 </head>
 <body>
 
