--- a/src/main/resources/templates/fragments/spot-adding-request.html
+++ b/src/main/resources/templates/fragments/spot-adding-request.html
@@ -2,7 +2,7 @@
 
 <div style="width: 100%; margin: auto; padding-top: 2em; border-radius: 5px; background-color: #fefefe; box-shadow: 0 0 10px rgba(0,0,0,.1);">
   <!-- Форматируем страницу с формой -->
-  <form action="#" method="post" enctype="multipart/form-data" th:action="@{'/spot-creation-request'}" th:object="${formData}">
+  <form action="#" method="post" enctype="multipart/form-data" th:action="@{'/spot-adding-request'}" th:object="${formData}">
 
     <div>
       <label for="spotName">Название спота:</label><br/>
