Xmap 36 - страница просмотра заявки, небольшой реф пакетов

--- a/src/main/resources/templates/fragments/profile.html
+++ b/src/main/resources/templates/fragments/profile.html
@@ -1,3 +1,5 @@
 <div>profile :)</div>
 
-<a href="/spot-adding-request-list">Мои заявки</a>
+<div>
+    <a href="/spot-adding-request-list">Мои заявки</a>
+</div>
