--- a/src/main/resources/templates/fragments/spot.html
+++ b/src/main/resources/templates/fragments/spot.html
@@ -1,3 +1,4 @@
+<h2 th:text="${spot.name()}"></h2>
 <div>
   <div th:if="${#lists.isEmpty(spot.spotImageLinks())}">
     Картинки для спота отсутствуют
@@ -10,6 +11,6 @@
   </div>
 
 </div>
-<div th:text="${spot.name()}"></div>
+
 <div th:text="${spot.description()}"></div>
 <div th:text="${spot.insertedAt()}"></div>
