--- a/src/main/resources/templates/fragments/spot-adding-request-instance.html
+++ b/src/main/resources/templates/fragments/spot-adding-request-instance.html
@@ -10,6 +10,9 @@
          alt="img">
   </div>
 
+  <div sec:authorize="hasAuthority('ADMIN')">
+    <button type="button" class="btn btn-primary">Кнопка доступна только для ACCEPTOR</button>
+  </div>
 </div>
 
 <div th:text="${spotAddingRequest.spotDescription()}"></div>
