--- a/src/main/resources/templates/layouts/base.html
+++ b/src/main/resources/templates/layouts/base.html
@@ -11,6 +11,7 @@
   <link href="/styles/common.css" rel="stylesheet">
   <link href="/styles/nav.css" rel="stylesheet">
   <link href="/styles/themes/light.css" rel="stylesheet">
+  <link href="/styles/themes/dark.css" rel="stylesheet">
 </head>
 <body>
 
