--- a/src/main/resources/templates/layouts/base.html
+++ b/src/main/resources/templates/layouts/base.html
@@ -12,6 +12,7 @@
   <link href="/styles/nav.css" rel="stylesheet">
   <link href="/styles/themes/light.css" rel="stylesheet">
   <link href="/styles/themes/dark.css" rel="stylesheet">
+  <link href="/styles/spot-list.css" rel="stylesheet">
 </head>
 <body>
 
