--- a/src/main/resources/templates/fragments/spot-list.html
+++ b/src/main/resources/templates/fragments/spot-list.html
@@ -1,7 +1,21 @@
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+
+</html>
+<head>
+  <script src="https://api-maps.yandex.ru/v3/?apikey=b9ae7ce3-4f8e-4018-ae49-7751e42c5c25&lang=ru_RU"></script>
+  <script src="/js/ymap.js"></script>
+  <link href="/styles/spot-list.css" rel="stylesheet">
+  <title>spots (fragment)</title>
+</head>
+
 <h2>Споты</h2>
 
 <div>sort</div>
 <div>filter</div>
+
+<div id="map" style="width: 100%; height: 400px"></div>
 
 <div th:if="${not #lists.isEmpty(spotList.content)}">
   <div th:each="spot : ${spotList.content}" class="spot-list__card-container">
