--- a/src/main/resources/templates/layouts/base.html
+++ b/src/main/resources/templates/layouts/base.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="/favicon.ico" />
   <title th:text="${title}">Базовый шаблон</title>
+
+  <script src="https://api-maps.yandex.ru/v3/?apikey=65f872b3-e2bf-4d2b-a368-27af097ace82&lang=ru_RU"></script>
+  <script src="/js/ymap.js"></script>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
   <link href="/styles/common.css" rel="stylesheet">
   <link href="/styles/nav.css" rel="stylesheet">
