--- a/src/main/resources/templates/spot-adding-request-instance.html
+++ b/src/main/resources/templates/spot-adding-request-instance.html
@@ -1,3 +1,4 @@
+<!-- todo deprecated-->
 <!DOCTYPE html>
 <div th:replace="layouts/base :: base(title='Заявка на добавление спота',
                                       contentFragment='fragments/spot-adding-request-instance')">
