--- a/src/main/resources/templates/spot-adding-request-list.html
+++ b/src/main/resources/templates/spot-adding-request-list.html
@@ -1,2 +1,3 @@
+<!-- todo deprecated-->
 <!DOCTYPE html>
 <div th:replace="layouts/base :: base(title='Мои заявки', contentFragment='fragments/spot-adding-request-list')"></div>
