--- a/src/main/resources/templates/spots.html
+++ b/src/main/resources/templates/spots.html
@@ -1,2 +1,3 @@
+<!-- todo deprecated-->
 <!DOCTYPE html>
 <div th:replace="layouts/base :: base(title='Список спотов', contentFragment='fragments/spot-list')"></div>
