--- a/src/main/resources/templates/fragments/spot-adding-request-instance.html
+++ b/src/main/resources/templates/fragments/spot-adding-request-instance.html
@@ -1,3 +1,4 @@
+<!-- todo deprecated-->
 <h2 th:text="${spotAddingRequest.spotName()}"></h2>
 <div>
   <div th:if="${#lists.isEmpty(spotAddingRequest.spotImageLinks())}">
