--- a/src/main/resources/templates/fragments/spot-adding-request.html
+++ b/src/main/resources/templates/fragments/spot-adding-request.html
@@ -1,3 +1,4 @@
+<!-- todo deprecated-->
 <h2>Добавление спота</h2>
 
 <div style="width: 100%; margin: auto; padding-top: 2em; border-radius: 5px; background-color: #fefefe; box-shadow: 0 0 10px rgba(0,0,0,.1);">
