--- a/src/main/resources/templates/fragments/spot-list.html
+++ b/src/main/resources/templates/fragments/spot-list.html
@@ -1,3 +1,4 @@
+<!-- todo deprecated-->
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
