--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -1,2 +1,3 @@
+<!-- todo deprecated-->
 <!DOCTYPE html>
 <div th:replace="layouts/base :: base(title='Профиль', contentFragment='fragments/profile')"></div>
