--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -1,2 +1,19 @@
 <!DOCTYPE html>
-<div th:replace="layouts/base :: base(title='Вход', contentFragment='fragments/forms/sign-in')"></div>
+<html lang="en" xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout}">
+<head>
+    <meta charset="UTF-8">
+    <title>Sign-in страница</title>
+</head>
+<body>
+<div layout:fragment="content">
+    <h1>Войдите в учетную запись</h1>
+    <div th:if="${param.error}">
+        Неверное имя или пароль</div>
+    <div th:if="${param.logout}">
+        Вы вышли</div>
+    <div th:replace="fragments/forms/sign-in :: form">
+        place for custom sign-in form
+    </div>
+</div>
+</body>
+</html>
