--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -1,2 +1,15 @@
 <!DOCTYPE html>
-<div th:replace="layouts/base :: base(title='Профиль', contentFragment='fragments/forms/sign-up')"></div>
+<html lang="en" xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout}">
+<head>
+    <meta charset="UTF-8">
+    <title>Sign-up страница</title>
+</head>
+<body>
+    <div layout:fragment="content">
+        <h1>Регистрация</h1>
+        <div th:replace="fragments/forms/sign-up :: form">
+            place for custom sign-up form
+        </div>
+    </div>
+</body>
+</html>
