--- a/src/main/resources/templates/spot-adding-request.html
+++ b/src/main/resources/templates/spot-adding-request.html
@@ -1,2 +1,3 @@
+<!-- todo deprecated-->
 <!DOCTYPE html>
 <div th:replace="layouts/base :: base(title='Добавить спот', contentFragment='fragments/spot-adding-request')"></div>
