--- a/src/main/resources/templates/spot.html
+++ b/src/main/resources/templates/spot.html
@@ -1,2 +1,3 @@
+<!-- todo deprecated-->
 <!DOCTYPE html>
 <div th:replace="layouts/base :: base(title='Просмотр спота', contentFragment='fragments/spot')"></div>
