Xmap 36 - нормальная шаблонизация thymeleaf для остальных страниц

--- a/src/main/resources/templates/fragments/forms/logout.html
+++ b/src/main/resources/templates/fragments/forms/logout.html
@@ -1,8 +1,7 @@
 <!-- Вроде страница не нужна, logout и так по get-запросу -->
 <!DOCTYPE html>
   <html lang="en"
-        xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect"
-        xmlns:th="http://www.thymeleaf.org">
+        xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect">
   <head>
     <meta charset="UTF-8">
     <title>Logout form fragment</title>
