--- a/src/main/resources/templates/fragments/forms/sign-in.html
+++ b/src/main/resources/templates/fragments/forms/sign-in.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"
-      xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect">
 <head>
   <meta charset="UTF-8">
   <title>Sign-in form fragment</title>
