--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang=""
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect">
 <head>
     <title>Layout title</title>
     <meta charset="utf-8">
