--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout}">
+<html lang="en"
+      xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect"
+      layout:decorate="~{layout}">
 <head>
     <meta charset="UTF-8">
     <title>Главная страница</title>
