--- a/src/main/resources/templates/sign-in.html
+++ b/src/main/resources/templates/sign-in.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout}">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect"
+      layout:decorate="~{layout}">
 <head>
     <meta charset="UTF-8">
     <title>Sign-in страница</title>
 </head>
 <body>
 <div layout:fragment="content">
-    <h1>Войдите в учетную запись</h1>
+    <h2>Войдите в учетную запись</h2>
     <div th:if="${param.error}">
         Неверное имя или пароль</div>
     <div th:if="${param.logout}">
