--- a/src/main/resources/templates/sign-up.html
+++ b/src/main/resources/templates/sign-up.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect" xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout}">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect"
+      layout:decorate="~{layout}">
 <head>
     <meta charset="UTF-8">
     <title>Sign-up страница</title>
 </head>
 <body>
     <div layout:fragment="content">
-        <h1>Регистрация</h1>
+        <h2>Регистрация</h2>
         <div th:replace="fragments/forms/sign-up :: form">
             place for custom sign-up form
         </div>
