--- a/src/main/resources/templates/spot.html
+++ b/src/main/resources/templates/spot.html
@@ -1,3 +1,30 @@
-<!-- todo deprecated-->
 <!DOCTYPE html>
-<div th:replace="layouts/base :: base(title='Просмотр спота', contentFragment='fragments/spot')"></div>
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect"
+      layout:decorate="~{layout}">
+<head>
+    <meta charset="UTF-8">
+    <title>Spot страница</title>
+</head>
+<body>
+    <div layout:fragment="content">
+        <h2 th:text="${spot.name()}"></h2>
+        <div>
+            <div th:if="${#lists.isEmpty(spot.spotImageLinks())}">
+                Картинки для спота отсутствуют
+            </div>
+            <div th:if="${not #lists.isEmpty(spot.spotImageLinks())}">
+                <img th:each="link : ${spot.spotImageLinks()}"
+                     th:src="@{${link}}"
+                     width="300px"
+                     alt="img">
+            </div>
+
+        </div>
+
+        <div th:text="${spot.description()}"></div>
+        <div th:text="${spot.insertedAt()}"></div>
+    </div>
+</body>
+</html>
