Xmap 36 - авито-подобная вертска списка-карты спотов

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -16,10 +16,7 @@
 
 </head>
 <body>
-    <div th:replace="fragments/header :: header">
-        place for custom header
-    </div>
-    <div class="container">
+    <div class="">
         <div layout:fragment="content">
             place for custom content
         </div>
