--- a/src/main/resources/static/styles/common.css
+++ b/src/main/resources/static/styles/common.css
@@ -2,6 +2,7 @@ body {
     font-family: PT Sans, Helvetica, Arial, sans-serif;
     width: 100%;
     margin: 0;
+    padding: 0;
     position: relative;
 }
 
