--- a/src/main/resources/templates/spots.html
+++ b/src/main/resources/templates/spots.html
@@ -7,56 +7,79 @@
     <meta charset="UTF-8">
     <title>Spots страница</title>
 
-    <script src="https://api-maps.yandex.ru/v3/?apikey=b9ae7ce3-4f8e-4018-ae49-7751e42c5c25&lang=ru_RU"></script>
-    <script src="/js/ymap.js"></script>
-    <link href="/styles/spot-list.css" rel="stylesheet">
+<!--    <script src="https://api-maps.yandex.ru/v3/?apikey=b9ae7ce3-4f8e-4018-ae49-7751e42c5c25&lang=ru_RU"></script>-->
+
+    <script src="/js/spot-list-map.js" defer></script>
+<!--    <script src="/js/ymap.js" defer></script>-->
+    <link href="/styles/spot-list-map.css" rel="stylesheet">
 </head>
 <body>
     <div layout:fragment="content">
-        <h2>Споты</h2>
-
-        <div>sort</div>
-        <div>filter</div>
-
-        <div id="map" style="width: 100%; height: 400px"></div>
-
-        <div th:if="${not #lists.isEmpty(spotList.content)}">
-            <div th:each="spot : ${spotList.content}" class="spot-list__card-container">
-                <a th:href="@{/spot/{spotId}(spotId=${spot.id()})}"
-                   class="spot-list__card">
-                    <h3 th:text="${spot.name()}"></h3>
-                    <p>Координаты: <span th:text="${spot.latitude()}"></span> <span th:text="${spot.longitude()}"></span></p>
-                    <p th:text="${spot.description()}"></p>
-                    <img class="spot-list__img" th:src="@{${spot.firstImageLink()}}" alt="Фотография места"/>
-                </a>
+        <div class="search-block">
+            <div class="search-block__search">
+                <input class="search-block__input" type="text" placeholder="Поиск"/>
+            </div>
+            <div class="search-block__settings">
+                <div class="search-block__sort">Сортировка</div>
+                <div class="search-block__filters">Фильтры</div>
             </div>
         </div>
-        <div th:if="${#lists.isEmpty(spotList.content)}">
-            Нет доступных мест.
+        <div class="map-list">
+            <div class="map-list__map"></div>
+            <div class="map-list__list spot-list__sticky-center">
+                <div>start! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur earum error nemo, officiis
+                    suscipit veniam vitae! Corporis dignissimos doloremque eius eum, fuga in, iste mollitia nobis
+                    nostrum pariatur reiciendis, sapiente.
+                </div>
+                <div>Animi earum hic quam qui recusandae sapiente voluptates. Adipisci commodi consequatur eos excepturi
+                    explicabo, id inventore iusto, necessitatibus, nemo obcaecati odio placeat praesentium quis ratione
+                    repellendus. Aliquam eaque odio quam.
+                </div>
+                <div>Aliquid atque, dolor ducimus exercitationem expedita impedit minus numquam placeat quasi quis?
+                    Adipisci blanditiis, cupiditate deleniti earum eligendi eum harum impedit qui sapiente suscipit.
+                    Aperiam enim porro possimus quod? last!
+                </div>
+            </div>
         </div>
-        <!-- Добавляем навигацию по страницам -->
-        <div th:if="${spotList.totalPages > 1}">
+<!--        <div id="map" style="width: 100%; height: 400px"></div>-->
 
-            <nav aria-label="Pagination navigation">
-                <ul class="spot-list__pagination">
-                    <li th:if="${spotList.number > 0}"
-                        th:attr="class=${spotList.number == 0 ? '' : 'page-item'}">
-                        <a href="#" th:href="@{'/spots?pageNumber=' + ${spotList.number - 1} + '&pageSize=3'}"
-                           class="spot-list__page-link">Предыдущая</a>
-                    </li>
-                    <li th:each="i : ${#numbers.sequence(0, spotList.totalPages - 1)}"
-                        th:attr="class=${spotList.number == i ? 'active' : ''}">
-                        <a href="#" th:href="@{'/spots?pageNumber=' + ${i} + '&pageSize=3'}"
-                           class="spot-list__page-link" th:text="${i + 1}"></a>
-                    </li>
-                    <li th:if="${spotList.number < spotList.totalPages - 1}"
-                        th:attr="class=${spotList.number == spotList.totalPages - 1 ? '' : 'page-item'}">
-                        <a href="#" th:href="@{'/spots?pageNumber=' + ${spotList.number + 1} + '&pageSize=3'}"
-                           class="spot-list__page-link">Следующая</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
+<!--        <div th:if="${not #lists.isEmpty(spotList.content)}">-->
+<!--            <div th:each="spot : ${spotList.content}" class="spot-list__card-container">-->
+<!--                <a th:href="@{/spot/{spotId}(spotId=${spot.id()})}"-->
+<!--                   class="spot-list__card">-->
+<!--                    <h3 th:text="${spot.name()}"></h3>-->
+<!--                    <p>Координаты: <span th:text="${spot.latitude()}"></span> <span th:text="${spot.longitude()}"></span></p>-->
+<!--                    <p th:text="${spot.description()}"></p>-->
+<!--                    <img class="spot-list__img" th:src="@{${spot.firstImageLink()}}" alt="Фотография места"/>-->
+<!--                </a>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div th:if="${#lists.isEmpty(spotList.content)}">-->
+<!--            Нет доступных мест.-->
+<!--        </div>-->
+        <!-- Добавляем навигацию по страницам -->
+<!--        <div th:if="${spotList.totalPages > 1}">-->
+
+<!--            <nav aria-label="Pagination navigation">-->
+<!--                <ul class="spot-list__pagination">-->
+<!--                    <li th:if="${spotList.number > 0}"-->
+<!--                        th:attr="class=${spotList.number == 0 ? '' : 'page-item'}">-->
+<!--                        <a href="#" th:href="@{'/spots?pageNumber=' + ${spotList.number - 1} + '&pageSize=3'}"-->
+<!--                           class="spot-list__page-link">Предыдущая</a>-->
+<!--                    </li>-->
+<!--                    <li th:each="i : ${#numbers.sequence(0, spotList.totalPages - 1)}"-->
+<!--                        th:attr="class=${spotList.number == i ? 'active' : ''}">-->
+<!--                        <a href="#" th:href="@{'/spots?pageNumber=' + ${i} + '&pageSize=3'}"-->
+<!--                           class="spot-list__page-link" th:text="${i + 1}"></a>-->
+<!--                    </li>-->
+<!--                    <li th:if="${spotList.number < spotList.totalPages - 1}"-->
+<!--                        th:attr="class=${spotList.number == spotList.totalPages - 1 ? '' : 'page-item'}">-->
+<!--                        <a href="#" th:href="@{'/spots?pageNumber=' + ${spotList.number + 1} + '&pageSize=3'}"-->
+<!--                           class="spot-list__page-link">Следующая</a>-->
+<!--                    </li>-->
+<!--                </ul>-->
+<!--            </nav>-->
+<!--        </div>-->
     </div>
 </body>
 </html>
