--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -16,11 +16,9 @@
 
 </head>
 <body>
-    <div class="">
-        <div layout:fragment="content">
-            place for custom content
-        </div>
-    </div>
+    <main layout:fragment="content">
+        place for custom content
+    </main>
 
     <div th:replace="fragments/nav :: mobile-bottom-nav">
         place for custom header
