--- a/src/main/resources/static/styles/themes/light.css
+++ b/src/main/resources/static/styles/themes/light.css
@@ -19,3 +19,9 @@
 .menu-nav__title {
     color: #8c8c8c;
 }
+
+.view-changing-btn {
+    color: #000;
+    background-color: #fff;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.04), 0 4px 28px 0 rgba(0, 0, 0, 0.08);;
+}
