--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Logout страница</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
 <body>
     <div layout:fragment="content">
