--- a/src/main/resources/templates/spots.html
+++ b/src/main/resources/templates/spots.html
@@ -7,14 +7,14 @@
     <meta charset="UTF-8">
     <title>Spots страница</title>
 
-<!--    <script src="https://api-maps.yandex.ru/v3/?apikey=b9ae7ce3-4f8e-4018-ae49-7751e42c5c25&lang=ru_RU"></script>-->
+    <script src="https://api-maps.yandex.ru/v3/?apikey=b9ae7ce3-4f8e-4018-ae49-7751e42c5c25&lang=ru_RU"></script>
 
     <script src="/js/spot-list-map.js" defer></script>
-<!--    <script src="/js/ymap.js" defer></script>-->
+    <script src="/js/ymap.js" defer></script>
     <link href="/styles/spot-list-map.css" rel="stylesheet">
 </head>
 <body>
-    <div layout:fragment="content">
+    <main layout:fragment="content">
         <div class="search-block">
             <div class="search-block__search">
                 <input class="search-block__input" type="text" placeholder="Поиск"/>
@@ -25,61 +25,52 @@
             </div>
         </div>
         <div class="map-list">
-            <div class="map-list__map"></div>
-            <div class="map-list__list spot-list__sticky-center">
-                <div>start! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur earum error nemo, officiis
-                    suscipit veniam vitae! Corporis dignissimos doloremque eius eum, fuga in, iste mollitia nobis
-                    nostrum pariatur reiciendis, sapiente.
+            <div class="map-list__map active" id="spot-map-container-id">
+                <div id="yandex-map-id" style="width: 100%; height: 100%"></div>
+                <div class="view-changing-btn" id="list-view-btn-id">Список</div>
+            </div>
+            <div class="map-list__list" id="spot-list-container-id">
+                <div th:if="${not #lists.isEmpty(spotList.content)}">
+                    <div th:each="spot : ${spotList.content}" class="spot-list__card-container">
+                        <a th:href="@{/spot/{spotId}(spotId=${spot.id()})}"
+                           class="spot-list__card">
+                            <h3 th:text="${spot.name()}"></h3>
+                            <p>Координаты: <span th:text="${spot.latitude()}"></span> <span th:text="${spot.longitude()}"></span></p>
+                            <p th:text="${spot.description()}"></p>
+                            <img class="spot-list__img" th:src="@{${spot.firstImageLink()}}" alt="Фотография места"/>
+                        </a>
+                    </div>
                 </div>
-                <div>Animi earum hic quam qui recusandae sapiente voluptates. Adipisci commodi consequatur eos excepturi
-                    explicabo, id inventore iusto, necessitatibus, nemo obcaecati odio placeat praesentium quis ratione
-                    repellendus. Aliquam eaque odio quam.
+                <div th:if="${#lists.isEmpty(spotList.content)}">
+                    Нет доступных мест.
                 </div>
-                <div>Aliquid atque, dolor ducimus exercitationem expedita impedit minus numquam placeat quasi quis?
-                    Adipisci blanditiis, cupiditate deleniti earum eligendi eum harum impedit qui sapiente suscipit.
-                    Aperiam enim porro possimus quod? last!
+<!--             Добавляем навигацию по страницам -->
+                <div th:if="${spotList.totalPages > 1}">
+
+                    <nav aria-label="Pagination navigation">
+                        <ul class="spot-list__pagination">
+                            <li th:if="${spotList.number > 0}"
+                                th:attr="class=${spotList.number == 0 ? '' : 'page-item'}">
+                                <a href="#" th:href="@{'/spots?pageNumber=' + ${spotList.number - 1} + '&pageSize=3'}"
+                                   class="spot-list__page-link">Предыдущая</a>
+                            </li>
+                            <li th:each="i : ${#numbers.sequence(0, spotList.totalPages - 1)}"
+                                th:attr="class=${spotList.number == i ? 'active' : ''}">
+                                <a href="#" th:href="@{'/spots?pageNumber=' + ${i} + '&pageSize=3'}"
+                                   class="spot-list__page-link" th:text="${i + 1}"></a>
+                            </li>
+                            <li th:if="${spotList.number < spotList.totalPages - 1}"
+                                th:attr="class=${spotList.number == spotList.totalPages - 1 ? '' : 'page-item'}">
+                                <a href="#" th:href="@{'/spots?pageNumber=' + ${spotList.number + 1} + '&pageSize=3'}"
+                                   class="spot-list__page-link">Следующая</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
+                <div  class="view-changing-btn" id="map-view-btn-id">Карта</div>
             </div>
         </div>
-<!--        <div id="map" style="width: 100%; height: 400px"></div>-->
 
-<!--        <div th:if="${not #lists.isEmpty(spotList.content)}">-->
-<!--            <div th:each="spot : ${spotList.content}" class="spot-list__card-container">-->
-<!--                <a th:href="@{/spot/{spotId}(spotId=${spot.id()})}"-->
-<!--                   class="spot-list__card">-->
-<!--                    <h3 th:text="${spot.name()}"></h3>-->
-<!--                    <p>Координаты: <span th:text="${spot.latitude()}"></span> <span th:text="${spot.longitude()}"></span></p>-->
-<!--                    <p th:text="${spot.description()}"></p>-->
-<!--                    <img class="spot-list__img" th:src="@{${spot.firstImageLink()}}" alt="Фотография места"/>-->
-<!--                </a>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div th:if="${#lists.isEmpty(spotList.content)}">-->
-<!--            Нет доступных мест.-->
-<!--        </div>-->
-        <!-- Добавляем навигацию по страницам -->
-<!--        <div th:if="${spotList.totalPages > 1}">-->
-
-<!--            <nav aria-label="Pagination navigation">-->
-<!--                <ul class="spot-list__pagination">-->
-<!--                    <li th:if="${spotList.number > 0}"-->
-<!--                        th:attr="class=${spotList.number == 0 ? '' : 'page-item'}">-->
-<!--                        <a href="#" th:href="@{'/spots?pageNumber=' + ${spotList.number - 1} + '&pageSize=3'}"-->
-<!--                           class="spot-list__page-link">Предыдущая</a>-->
-<!--                    </li>-->
-<!--                    <li th:each="i : ${#numbers.sequence(0, spotList.totalPages - 1)}"-->
-<!--                        th:attr="class=${spotList.number == i ? 'active' : ''}">-->
-<!--                        <a href="#" th:href="@{'/spots?pageNumber=' + ${i} + '&pageSize=3'}"-->
-<!--                           class="spot-list__page-link" th:text="${i + 1}"></a>-->
-<!--                    </li>-->
-<!--                    <li th:if="${spotList.number < spotList.totalPages - 1}"-->
-<!--                        th:attr="class=${spotList.number == spotList.totalPages - 1 ? '' : 'page-item'}">-->
-<!--                        <a href="#" th:href="@{'/spots?pageNumber=' + ${spotList.number + 1} + '&pageSize=3'}"-->
-<!--                           class="spot-list__page-link">Следующая</a>-->
-<!--                    </li>-->
-<!--                </ul>-->
-<!--            </nav>-->
-<!--        </div>-->
-    </div>
+    </main>
 </body>
 </html>
