Xmap 36 - fix accept btn

--- a/src/main/resources/templates/spot-adding-request-instance.html
+++ b/src/main/resources/templates/spot-adding-request-instance.html
@@ -7,6 +7,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Spot adding request instance страница</title>
+    <script src="/js/acceptor/spot-adding-request-instance.js"
+            sec:authorize="hasAuthority('ACCEPTOR')"></script>
+    <script sec:authorize="hasAuthority('ACCEPTOR')">
+        const baseUrl = '[[${baseUrl}]]';
+        const spotAddingRequestId = '[[${spotAddingRequestId}]]';
+        const acceptSpotAddingRequestUrl = baseUrl + '/spot-adding-request/accept';
+    </script>
 </head>
 <body>
 <div layout:fragment="content">
@@ -34,40 +41,5 @@
     <div th:text="${spotAddingRequest.acceptorId()}"></div>
 </div>
 
-<script type="application/javascript"
-        sec:authorize="hasAuthority('ACCEPTOR')">
-    const baseUrl = '[[${baseUrl}]]';
-    const spotAddingRequestId = '[[${spotAddingRequestId}]]';
-    const acceptSpotAddingRequestUrl = baseUrl + '/spot-adding-request/accept';
-
-    acceptSpotAddingRequestFetch = () => {
-        const formData = new FormData();
-        formData.append("spotAddingRequestId", spotAddingRequestId.toString());
-
-        fetch(acceptSpotAddingRequestUrl, {
-            method: "PATCH",
-            body: formData
-        }).then((response) => {
-            if (response.ok) {
-                console.log(response);
-            } else {
-                console.log("Network request failed with response " +
-                    response.status + ": " + response.statusText + "; " + response.body
-                );
-                console.log(response);
-            }
-        }).catch(err => {
-            console.log(err);
-        });
-    }
-
-    acceptSpotAddingRequest = () => {
-        acceptSpotAddingRequestFetch();
-    }
-
-    const btnAccept = document.getElementById("spotAddingRequestId");
-
-    btnAccept.addEventListener("click", () => acceptSpotAddingRequest());
-</script>
 </body>
 </html>
