Xmap 36 - ru локаль для страниц

--- a/src/main/resources/templates/fragments/forms/logout.html
+++ b/src/main/resources/templates/fragments/forms/logout.html
@@ -1,6 +1,6 @@
 <!-- Вроде страница не нужна, logout и так по get-запросу -->
 <!DOCTYPE html>
-  <html lang="en"
+<html lang="ru"
         xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect">
   <head>
     <meta charset="UTF-8">
