--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=""
+<html lang="ru"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect">
 <head>
