--- a/src/main/resources/templates/spots.html
+++ b/src/main/resources/templates/spots.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
+<html lang="ru"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ulisse.it/thymeleaf-layout-dialect"
       layout:decorate="~{layout}">
